css/style.css
* {
    box-sizing: border-box;
    /* overflow: hidden; */
}


html {
    font-family: Onest, sans-serif;
    font-size: 2vh;
}


/* RESET BUTTON BORDER */
button {
    border: none;
}

/* GENERAL STYLING */

.control-width {
    max-width: 150vh;
}

p {
    color: #424242;
    line-height: 3.8vh;
}

h3 {
    font-size: inherit;
    line-height: inherit;
}


a {
    color: inherit;
    width: -moz-fit-content;
    width: fit-content;
    cursor: pointer;
}

.btn {
    font-size: 2vh;
    line-height: 3vh;
    letter-spacing: 0.1vw;
    color: white;
    font-weight: 500;
    padding: 2vh 3vh;
    display: flex;
    gap: 2vh;
    align-items: center;
    justify-content: space-between;
}

.btn>img {
    width: 3vh;
    transition: transform .25s ease-in;
}

.btn:hover img {
    transform: rotate(-30deg);
}

.gap {
    gap: 4vh;
}

.sd-padding {
    padding-top: 10vh;
    padding-bottom: 15vh;
}

.dark-bg {
    background-color: #000;
    color: white !important;
}

.light-bg {
    background-color: white;
}

.gray-bg {
    background-color: #FCFCFC;
}

.dark-bg p {
    color: #A5A5A5;
}

/* RESPONSIVE DISPLAY */

.d-lg {
    display: block;
}

.d-md {
    display: none;
}




/* HEADER */

.logo {
    font-size: 2.4vh;
    font-weight: 500;
}

.menu {
    font-size: 1.5vh;
    font-weight: 400;
    display: flex;
    gap: 4vh;
}

.menu li {
    padding-bottom: 0.75vh;
    border-bottom: 0.2vh solid #0000;
    transition: border 0.75s;
    cursor: pointer;
}

.menu li:hover {
    border-color: white !important;
}


.header {
    display: flex;
    height: 12vh;
    color: white;
    margin-bottom: -12vh;
    z-index: 2;
    position: absolute;
    animation: dropin 3.5s;
}


/* SITE HERO */
.hero {
    background: center / cover no-repeat url("../images/Hero\ image.png");
    height: 100vh;
    width: 100%;
    position: relative;
    overflow: hidden;
}

.hero::before {
    content: "";
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 1;
    position: absolute;
    top: 0%;
    left: 0%;
    height: 100vh;
    width: 100%;
}


.hero-body {
    z-index: 2;
    color: white;
    position: absolute;
    max-height: 62.5vw;
    top: 45%;
}

.hero-gap {
    gap: auto;
}

.hero-h {
    font-size: 10vh;
    line-height: 11vh;
    width: 55%;
}

.hero-btn {
    font-size: 2vh;
    line-height: 3vh;
    letter-spacing: 0.1vw;
    color: white;
    font-weight: 500;
    padding-right: 7vw;
    cursor: pointer;
    width: 22%;
}

.hero-btn:hover .hero-btn-arrow {
    width: 90%;
}

.hero-btn-arrow {
    margin-top: 0.5vh;
    width: 120%;
    transition: width 1.5s ease;
}


/* OUR IMPACT */

.secondary {
    font-size: 8vh;
    line-height: 10vh;
    width: 55%;
}

.stats-div {
    width: 60%;
    margin-left: auto;
    align-items: end;
}

.stats {
    font-size: 9vh;
    line-height: 11vh;
}

.stat-content {
    font-size: 2.2vh;
}

.left-stat {
    width: 55%;
}

.stat-left {
    margin-left: auto;
    display: flex;
    flex-direction: column;
    align-items: end;
}


.vertical-divider {
    width: 0.2vw;
    height: 9vh;
    padding: 0;
    margin: 0;
}

.horizontal-divider {
    width: 100%;
    height: 0.1vh;
    padding: 0;
    margin: 0;
}


/* SERVICES */

#services {
    overflow: hidden;
    height: 74vh;
    padding-top: 3vh;
}


.service-p {
    max-width: 38%;
    font-size: 2vh;
    line-height: 3.8vh;
}


.services-items {
    position: relative;
    width: 30%;
    height: 60vh;
    padding-left: 1%;
}

.service-item {
    width: 100%;
    height: 85%;
}


.services-items img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: grayscale(100%);
    transition: filter 0.5s ease
}

.services-items:hover img {
    filter: grayscale(0)
}

.slide {
    position: relative;
    transition: transform 2.5s ease;
}

.service-cta {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 8vh;
    height: 8vh;
    transform: translate(-50%, -50%);
    z-index: 3;
    opacity: 0;
    transition: opacity .5s ease;
    cursor: pointer;
}

.services-items:hover .service-cta {
    opacity: 1;
}


.nav-icons {
    stroke: white;
    transition: stroke 2.5s
}

#service-prev {
    stroke: #A5A5A5;
}


/* MORE INFO SECTION */

.more-info {
    column-gap: 15%;
}

.info-h {
    font-size: 5vh;
    font-weight: 500;
    line-height: 7vh;
}


/* TESTIMONIALS */

.testimonial-slide {
    transition: transform 2.5s ease;
}

.testimonial {
    width: 100%;
    padding: 5vh 5vw 5vh 8vw;
    margin: 5vh 0;
}


.test-summary {
    font-size: 5vh;
    line-height: 6vh;
    font-weight: 500;
}

.testimonial {
    gap: 4vh;
}

.testimonial-quote {
    width: 10vh;
    height: auto;
    position: relative;
    left: -10vh;
}


.testimonial p {
    line-height: 5.4vh;
    color: #424242;
    font-size: 2.8vh;
}

.testimonial-user-info img {
    width: 10vh;
    height: 10vh;
    object-fit: cover;
    border-radius: 50%;
}


.testimonial-user-info h4 {
    font-size: 2.8vh;
    line-height: 4vh;
    font-weight: 500;
    margin-bottom: 0.75vh;
}


.test-nav-icons {
    stroke: black;
}



/* FOOTER */

.footer {
    padding-top: 7vh;
    padding-bottom: 7vh;
}

.footer-h {
    font-size: 7vh;
    line-height: 8vh;
}


.newsletter-form {
    border-bottom: #A5A5A5 solid 0.075vh;
    padding-bottom: 1vh;
    padding-top: 1vh;
    width: 75%;
    margin-left: auto;
}

.newsletter-form>input {
    background-color: #0000;
    border: none;
    width: 100%;
    font-size: 2.8vh;
    line-height: 3.8vh;
    color: #d5d5d5;
}

.newsletter-form>input:focus {
    outline: none;
}


.newsletter-form .btn>img {
    width: 4vh;
}


.footer-policy {
    margin-top: 8vh;
}


.footer-menu {
    font-size: 2vh;
    line-height: 2.5vh;
    color: #A5A5A5;
    display: flex;
    gap: 4vh;
}

.footer-menu li {
    transition: color 0.5s ease;
    cursor: pointer;
}

.footer-menu li:hover {
    color: white;
}

.social-media {
    gap: 2vh;
}

.social-icon {
    width: 6vh;
    height: 6vh;
    padding: 2vh;
    border: solid 0.1vh #151515;
    border-radius: 50%;
    cursor: pointer;
    transition: border 0.5s ease;
}

.social-icon:hover {
    border: solid 0.1vh #ffffff;
}


.social-icon>img {
    width: 2vh;
}



@media only screen and (max-width: 1240px) {

    /* GENERAL STYLES */
    .control-width {
        max-width: 980px;
    }


    /* HERO */

    .hero-h {
        font-size: 9.5vh;
        line-height: 11vh;
        width: 65%;
    }


    /* OUR IMPACT */

    .secondary {
        width: 75%;
    }

    .stats-div {
        width: 65%;
    }

    .left-stat {
        width: 65%;
    }


    /* MORE INFO SECTION */

    .info-h {
        font-size: 3.8vh;
        line-height: 5vh;
    }

    /* TESTIMONIALS */

    .test-summary {
        font-size: 4vh;
        line-height: 5vh
    }


    /* FOOTER */

    .footer-h {
        font-size: 6vh;
    }
}


@media only screen and (max-width: 920px) {

    /* GENERAL STYLES */

    .full-width-md {
        width: 100% !important;
    }

    .flex-col-md {
        flex-direction: column;
    }

    .control-width {
        max-width: 90%;
    }

    .sd-padding {
        padding-top: 8vh;
        padding-bottom: 10vh;
    }


    /* RESPONSIVE DISPLAYS */

    .d-lg {
        display: none;
    }

    .d-md {
        display: block;
    }

    /* HERO */

    .hero-body {
        flex-direction: column !important;
        align-items: start !important;
        top: 40%;
    }

    .hero-h {
        font-size: 9vw;
        line-height: 12vw;
        width: 85%;
    }

    .hero-gap {
        gap: 10vh;
    }

    .hero-btn {
        font-size: 3.4vw;
        line-height: 6vw;
        width: 40%;
    }


    /* OUR IMPACT */

    .impact {
        gap: 7vh;
    }

    .secondary {
        font-size: 7vh;
        line-height: 9vh;
        width: 100%;
    }

    .stats-div {
        width: 100%;
    }

    .stats {
        font-size: 7vh;
        line-height: 8vh;
    }


    /* SERVICES */

    .services-body {
        flex-direction: column;
        gap: 5vh;
    }

    .service-p {
        max-width: 90%;
    }

    .services-items {
        width: 45%;
    }


    /* TESTIMONIALS */

    .testimonial-body {
        gap: 5vh;
    }

    .test-summary {
        font-size: 3vh;
        line-height: 4vh;
    }

    .testimonial p {
        line-height: 4vh;
        font-size: 2vh;
    }

    .testimonial-quote {
        width: 6vh;
        left: -8vh;
        top: 5vh;
    }

    .testimonial {
        margin: 0;
    }

    /* FOOTER */

    .newsletter-body {
        gap: 5vh;
    }

    .newsletter-form {
        width: 100%;
        margin-left: 0;
    }
}


@media only screen and (max-width: 560px) {
    /* GENERAL STYLES */

    .control-width {
        max-width: 92%;
    }

    p {
        font-size: 4.5vw;
        line-height: 8vw;
    }

    /* HEADER */

    .logo {
        font-size: 5vw;
    }

    /* HERO */

    .hero-body {
        top: 45%;
    }

    .hero-h {
        font-size: 10vw;
        line-height: 14vw;
    }

    .hero-gap {
        gap: 14vw;
    }

    .hero-btn {
        font-size: 4.5vw;
        line-height: 7vw;
        width: 50%;
    }

    /* OUR IMPACT */

    .secondary {
        font-size: 12vw;
        line-height: 15vw;
    }

    .stats {
        font-size: 10vw;
        line-height: 12vw;
    }

    .stats-div p {
        font-size: 3.5vw;
        line-height: 5vw;
    }

    .left-stat {
        width: 70%;
    }


    /* SERVICES */

    .service-p {
        max-width: 100%;
        font-size: 4.5vw;
        line-height: 8vw;
    }

    .services-items {
        width: 80%;
        padding-left: 4%;
    }

    .service-item {
        height: 80%;
    }

    .services-items h3 {
        font-size: 6vw;
        line-height: 8vw;
    }


    /* MORE INFO */

    .info-h {
        line-height: 6vh;
    }


    /* TESTIMONIAL */

    .testimonial-quote {
        width: 5vh;
        left: -3vh;
        top: 2vh;
    }


    /* FOOTER */

    .footer-h {
        font-size: 10vw;
        line-height: 14vw;
    }

    .footer-policy {
        margin: 5vh 0 3vh 0;
        flex-direction: column;
        gap: 4vh;
    }

    .footer-menu {
        flex-direction: column;
    }
}

